Fix padding issue on smaller screens

--- a/src/styles/DynamicText.css
+++ b/src/styles/DynamicText.css
@@ -6,7 +6,7 @@
     height: 100px; 
     font-size: 2.0em; 
     color: #f0f0f0c0; 
-    margin: 20px 0; 
+    margin: 10px 0; 
     white-space: nowrap; 
   }
   
